fix property value serialization